Error fixes and updates